// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Document Model -> selection-format-action node helper selectionFormatAction - action is SELECTION_ACTION_H1 1`] = `
Object {
  "executeSelectionOffsets": Object {
    "caretStart": -1,
    "startNodeId": "f677",
  },
  "historyState": Array [
    Object {
      "executeState": Immutable.Map {
        "post_id": 175,
        "id": "f677",
        "next_sibling_id": "db70",
        "type": "h1",
        "content": "Second paragraph with some formats",
        "meta": Immutable.Map {},
      },
      "unexecuteState": Immutable.Map {
        "post_id": 175,
        "id": "f677",
        "next_sibling_id": "db70",
        "type": "p",
        "content": "Second paragraph with some formats",
        "meta": Immutable.Map {
          "selections": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": undefined,
                      "length": -1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": true,
                      "linkUrl": "http://some.site",
                    },
                    "length": 1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 4,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": true,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 4,
              "selection-bold": true,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 17,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
        },
      },
    },
  ],
  "updatedSelection": Immutable.Record {
    "next": undefined,
    "length": -1,
    "selection-bold": false,
    "selection-italic": false,
    "selection-code": false,
    "selection-siteinfo": false,
    "selection-mini": false,
    "selection-strikethrough": false,
    "selection-link": false,
    "linkUrl": "",
  },
}
`;

exports[`Document Model -> selection-format-action node helper selectionFormatAction - action is SELECTION_ACTION_H1 2`] = `
Object {
  "startNodeId": "f677",
  "updatedNode": Immutable.Map {
    "post_id": 175,
    "id": "f677",
    "next_sibling_id": "db70",
    "type": "p",
    "content": "Second paragraph with some formats",
    "meta": Immutable.Map {},
  },
  "updatedSelection": Immutable.Record {
    "next": undefined,
    "length": -1,
    "selection-bold": false,
    "selection-italic": false,
    "selection-code": false,
    "selection-siteinfo": false,
    "selection-mini": false,
    "selection-strikethrough": false,
    "selection-link": false,
    "linkUrl": "",
  },
}
`;

exports[`Document Model -> selection-format-action node helper selectionFormatAction - action is SELECTION_ACTION_H2 1`] = `
Object {
  "executeSelectionOffsets": Object {
    "caretStart": -1,
    "startNodeId": "f677",
  },
  "historyState": Array [
    Object {
      "executeState": Immutable.Map {
        "post_id": 175,
        "id": "f677",
        "next_sibling_id": "db70",
        "type": "h2",
        "content": "Second paragraph with some formats",
        "meta": Immutable.Map {},
      },
      "unexecuteState": Immutable.Map {
        "post_id": 175,
        "id": "f677",
        "next_sibling_id": "db70",
        "type": "p",
        "content": "Second paragraph with some formats",
        "meta": Immutable.Map {
          "selections": Immutable.Record {
            "next": Immutable.Record {
              "next": Immutable.Record {
                "next": Immutable.Record {
                  "next": Immutable.Record {
                    "next": Immutable.Record {
                      "next": undefined,
                      "length": -1,
                      "selection-bold": false,
                      "selection-italic": false,
                      "selection-code": false,
                      "selection-siteinfo": false,
                      "selection-mini": false,
                      "selection-strikethrough": false,
                      "selection-link": true,
                      "linkUrl": "http://some.site",
                    },
                    "length": 1,
                    "selection-bold": false,
                    "selection-italic": false,
                    "selection-code": false,
                    "selection-siteinfo": false,
                    "selection-mini": false,
                    "selection-strikethrough": false,
                    "selection-link": false,
                    "linkUrl": "",
                  },
                  "length": 4,
                  "selection-bold": false,
                  "selection-italic": false,
                  "selection-code": true,
                  "selection-siteinfo": false,
                  "selection-mini": false,
                  "selection-strikethrough": false,
                  "selection-link": false,
                  "linkUrl": "",
                },
                "length": 1,
                "selection-bold": false,
                "selection-italic": false,
                "selection-code": false,
                "selection-siteinfo": false,
                "selection-mini": false,
                "selection-strikethrough": false,
                "selection-link": false,
                "linkUrl": "",
              },
              "length": 4,
              "selection-bold": true,
              "selection-italic": false,
              "selection-code": false,
              "selection-siteinfo": false,
              "selection-mini": false,
              "selection-strikethrough": false,
              "selection-link": false,
              "linkUrl": "",
            },
            "length": 17,
            "selection-bold": false,
            "selection-italic": false,
            "selection-code": false,
            "selection-siteinfo": false,
            "selection-mini": false,
            "selection-strikethrough": false,
            "selection-link": false,
            "linkUrl": "",
          },
        },
      },
    },
  ],
  "updatedSelection": Immutable.Record {
    "next": undefined,
    "length": -1,
    "selection-bold": false,
    "selection-italic": false,
    "selection-code": false,
    "selection-siteinfo": false,
    "selection-mini": false,
    "selection-strikethrough": false,
    "selection-link": false,
    "linkUrl": "",
  },
}
`;

exports[`Document Model -> selection-format-action node helper selectionFormatAction - action is SELECTION_ACTION_H2 2`] = `
Object {
  "startNodeId": "f677",
  "updatedNode": Immutable.Map {
    "post_id": 175,
    "id": "f677",
    "next_sibling_id": "db70",
    "type": "p",
    "content": "Second paragraph with some formats",
    "meta": Immutable.Map {},
  },
  "updatedSelection": Immutable.Record {
    "next": undefined,
    "length": -1,
    "selection-bold": false,
    "selection-italic": false,
    "selection-code": false,
    "selection-siteinfo": false,
    "selection-mini": false,
    "selection-strikethrough": false,
    "selection-link": false,
    "linkUrl": "",
  },
}
`;
